# QuYAML

./: .A.quyaml  .B.quyaml  .gitignore  .qa.out.json  .qa.quyaml  .qa_back.quyaml  COMPLETE_BENCHMARK_ANALYSIS.md  OPTIMIZATION_RESULTS.md  README.md  RELEASE_NOTES_v0.2.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.4.0.md  RELEASE_SUMMARY_v0.2.0.md  SUMMARY_v0.2.md  benchmark.py  benchmark_opt_output.txt  benchmark_vs_standards.py  pyproject.toml  qiskit_bridge.py  quyaml_parser.py  quyaml_pennylane.py  requirements.txt
.github/workflows/: benchmark.yml  ci.yml
benchmarks/: README.md  _ci_pennylane_results.txt  _last_pennylane_results.txt  analyze_tokens.py  archived_comprehensive.py  archived_vs_standards.py  benchmark_complete.py  benchmark_optimized.py  benchmark_pennylane.py  benchmark_with_tiktoken.py  pennylane_baseline.json  test_optimized_syntax.py
benchmarks/results/: ANALYSIS_QuYAML_vs_OpenQASM.py  BENCHMARK_ANALYSIS.md  NEXT_STEPS.md  OPTIMIZATION_PROPOSAL.md  TIKTOKEN_RESULTS_SUMMARY.md  benchmark_comprehensive_results.txt  benchmark_tiktoken_results.txt  benchmark_vs_standards_results.txt
benchmarks/samples/: control_flow.quyaml  (+5 more)
docs/: EVALUATION_v0.2.md  MIGRATION_0.3_to_0.4.md
scripts/: bench_ci.py  check_pennylane_regression.py  check_qasm3_api.py  dataset_gen.py  quyaml_cli.py  smoke_pennylane.py
tests/: test_advanced_algorithms.py  test_advanced_circuits.py  test_invalid_syntax.py  test_job_manifest.py  test_performance.py  test_property_based.py  test_qasm3_roundtrip.py  test_security_and_version.py  test_v0_3_features.py  test_v0_4_features.py  test_valid_circuits.py  test_yaml_restrictions.py
vscode-extension/: language-configuration.json  package-lock.json  package.json  snippets.json
(+6 files in other folders)
