[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quyaml"
version = "0.4.0"
description = "QuYAML: a readable, compact quantum circuit format with Qiskit converter and CLI"
readme = "README.md"
authors = [{ name = "Ahmed Samir" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "pyyaml",
  "qiskit>=2.0,<2.2",
  "numpy",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Ahmed-Samir11/QuYAML"

[project.scripts]
quyaml = "scripts.quyaml_cli:main"

[project.optional-dependencies]
qasm3 = [
  "qiskit_qasm3_import",
]
viz = [
  "matplotlib",
  "pylatexenc",
  "pylatex",
]
